errors found in login side will look into tommorow